# .bonk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: chocolatey.yml  ci.yml  homebrew.yml  pages.yml  release.yml
crates/bonk-core/: Cargo.toml
crates/bonk-core/src/: conn.rs  lib.rs
crates/bonk-core/src/application/: app_state.rs  git.rs  grpc_native.rs  http.rs  mod.rs  workspace.rs
crates/bonk-core/src/domain/: grpc.rs  http.rs  mod.rs  url.rs  workspace.rs
crates/bonk-core/src/infra/: reqwest_client.rs
docs/landing/: index.html  landing.css  landing.js
packaging/chocolatey/: bonk.nuspec
packaging/chocolatey/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1
src/: App.svelte  app.css  bigsur.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src/lib/: api.ts  git.ts  grpcActions.ts  persist.ts  requestRuntime.ts  stores.ts  theme.test.ts  theme.ts  updater.ts
src/styles/: 01-base.css  02-sidebar.css  03-request.css  04-response.css  05-chrome.css  06-bigsur-polish.css  07-body-editor.css  08-git.css  09-perf.css
tests/: buildUrl.test.ts  curl.test.ts  grpc.test.ts  grpcSnapshot.test.ts  highlight.test.ts  history.test.ts  historyReplay.test.ts  historyRetention.test.ts  httpBody.test.ts  jsonEditor.test.ts  sendRouting.test.ts  title.test.ts  tree.test.ts  treeParent.test.ts
(+54 files in other folders)
